# ecofilia-fligoo

./: .gitignore  README.md
backend/: README.md  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  rav.yaml
backend/apps/document/: admin.py  apps.py  models.py  signals.py
backend/apps/document/api/: filters.py  serializers.py  urls.py  views.py
backend/apps/document/migrations/: 0001_enable_pgvector.py  0002_initial.py
backend/apps/document/utils/: chunker.py  client_openia.py  client_tiktoken.py  parser.py
backend/apps/user/: admin.py  models.py
backend/apps/user/migrations/: 0001_initial.py
backend/docker/: Dockerfile  entrypoint-prod.sh  entrypoint.sh  template.env
backend/main/: urls.py
backend/main/settings/: base.py  dev.py
backend/nginx/: default.conf
rag-tester/: package-lock.json
rag-tester/app/: page.tsx
rag-tester/app/api/process-document/: route.ts
rag-tester/app/api/query/: route.ts
rag-tester/app/api/upload/: route.ts
